--- a/index.html
+++ b/index.html
@@ -1,29 +1,48 @@
- <!DOCTYPE html>
- <html lang="en">
- <head>
-     <meta charset="UTF-8">
-     <link rel="stylesheet" href="css/bootstrap.min.css">
-     <link rel="stylesheet" href="css/main.css">
-     <title>Puppy Love</title>
- </head>
- <body>
-    <header>
-        <div>
-         <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
-        </div>
-    </header>
-    <div id="compromiso"></div>
-    <div id="can"></div>
-    <div id="beneficios"></div>
-    <div id="contactanos"></div>
-    <footer>
-        <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
-        <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
-        <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
-        <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
-        <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
-    </footer>
-     <script src="js/bootstrap.min.js"></script>
-     <script src="js/app.js"></script>
- </body>
- </html>
+  <!DOCTYPE html>
+  <html lang="en">
+  <head>
+      <meta charset="UTF-8">
+      <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+      <link rel="stylesheet" href="css/bootstrap.min.css">
+      <link rel="stylesheet" href="css/main.css">
+      <title>Puppy Love</title>
+  </head>
+  <body>
+     <header>
+         <div>
+           <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
+           <div id="title" class="text-center">
+            <h3>PUPPY LOVE</h3>
+            <p>ESTAMOS AQUÍ POR ELLOS<br>QUIENES SON PURO AMOR</p>
+            <button>¡ADOPTA!</button>
+            <p>LEER MÁS <br><img src="img/icons/arrow.svg" alt=""></p>
+           </div>
+         </div>
+     </header>
+     <div id="compromiso" class="text-center">
+      <p class="title">SON EXCELENTES COMPAÑEROS<br>¡TENEMOS MUCHOS DE ELLOS QUE ESPERAN CONOCERTE!</p>
+      <span class="bajada">Nosotros te ayudaremos a encontrar a un puppy love que sea compatible con tu estilo de vida.<br>¡Visita nuestro centro de adopciones para encontrar a un pequeño amigo y mucho amor!</span><br>
+      <span>
+       <img src="img/icons/pet-plate.svg" alt="">
+       <img src="img/icons/collar.svg" alt="">
+       <img src="img/icons/bone.svg" alt="">
+      </span>
+     </div>
+     <div id="can">
+      <div class="row">
+       <div class="col-md-4"></div>
+      </div>
+     </div>
+     <div id="beneficios"></div>
+     <div id="contactanos"></div>
+     <footer>
+         <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+         <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+         <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+         <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+         <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+     </footer>
+      <script src="js/bootstrap.min.js"></script>
+      <script src="js/app.js"></script>
+  </body>
+  </html>
