--- a/index.html
+++ b/index.html
@@ -30,11 +30,84 @@
      </div>
      <div id="can">
       <div class="row">
-       <div class="col-md-4"></div>
+       <div class="col-md-4">
+        <img src="img/pic01.jpg" class="img-text" alt="perro-en-skate">
+       </div>
+       <div class="col-md-8">
+        <p class="title">Rescatados<br>Fueron rescatados del abandono o una mala crianza.</p>
+        <span class="bajada">Todos ellos han pasado por un proceso de socialización en los albergues, lo que garantiza su recuperación.</span>
+       </div>
+      </div>
+      <div class="row">
+       <div class="col-md-8">
+        <p class="title">Únicos</p>
+        <span class="bajada">Todos son sobrevivientes, son héroes con historias y experiencias que lo hacen únicos.</span>
+       </div>
+       <div class="col-md-4">
+        <img src="img/pic02.jpg" class="img-text" alt="perro-en-skate">
+       </div>
+      </div>
+      <div class="row">
+       <div class="col-md-4">
+        <img src="img/pic03.jpg" class="img-text" alt="perro-en-skate">
+       </div>
+       <div class="col-md-8">
+        <p class="title">Nobles<br>Un Puppy Love agradecerá siempre poder compartir su vida a tu lado.</p>
+        <span class="bajada">Será un amigo fiel que te acompañará y alegrará tus días.</span>
+       </div>
       </div>
      </div>
-     <div id="beneficios"></div>
-     <div id="contactanos"></div>
+     <div id="beneficios" class="text-center">
+      <p class="title">SON EXCELENTES COMPAÑEROS<br>¡TENEMOS MUCHOS DE ELLOS QUE ESPERAN CONOCERTE!</p>
+      <span class="bajada">Nosotros te ayudaremos a encontrar a un puppy love que sea compatible con tu estilo de vida.<br>¡Visita nuestro centro de adopciones para encontrar a un pequeño amigo y mucho amor!</span>
+      <div class="row text-left">
+       <div class="col-md-3">
+        <img src="img/icons/bone-rotate.svg" alt=""><br>
+        <p class="title">Alimentación adecuada</p>
+        <span class="bajada">Asegurate que su dieta vaya acorde a su edad y peso. Es importante para una buena calidad de vida.</span>
+       </div>
+       <div class="col-md-3">
+        <img src="img/icons/pet-house.svg" alt=""><br>
+        <p class="title">Espacios idóneos</p>
+        <span class="bajada">Proporciónale un espacio donde pueda jugar, descansar, desenvolverse y ser parte activa de la vida de tu familia.</span>
+       </div>
+      </div>
+      <div class="row text-left">
+       <div class="col-md-3">
+        <img src="img/icons/pet.svg" alt=""><br>
+        <p class="title">Son de gran beneficio para niños y adultos mayores</p>
+        <span class="bajada">Siempre que se decida cuidar de ellos en consciencia.</span>
+       </div>
+       <div class="col-md-3">
+        <img src="img/icons/track.svg" alt=""><br>
+        <p class="title">Debemos tener en cuenta que adoptarlos supone una gran responsabilidad</p>
+        <span class="bajada">Costes económicos adicionales y una atención constante.</span>
+       </div>
+      </div>
+      <div class="row text-left">
+       <div class="col-md-3">
+        <img src="img/icons/dog.svg" alt=""><br>
+        <p class="title">Adopta</p>
+        <span class="bajada"> Serán tus mejores amigos, estarán contigo y serán parte de tu familia.</span>
+       </div>
+       <div class="col-md-3">
+        <img src="img/icons/track-two.svg" alt=""><br>
+        <p class="title">Apadrina</p>
+        <span class="bajada">Puedes apadrinarlos, son amistosos, educados y necesitan de tu apoyo.</span>
+       </div>
+      </div>
+     </div>
+     <div id="contactanos">
+      <div class="row">
+       <div class="col-md-5">
+        <p class="title">¡TENEMOS MUCHOS DE ELLOS QUE ESPERAN CONOCERTE!</p>
+        <span class="bajada">¡Visita nuestro centro de adopciones para encontrar a un pequeño amigo y mucho amor!</span>
+       </div>
+       <div class="col-md-5">
+        
+       </div>
+      </div>
+     </div>
      <footer>
          <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
          <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
