--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
      <header>
          <div>
            <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
-           <div id="title" class="text-center">
-            <h3>PUPPY LOVE</h3>
+           <div id="title" class="text-center text-uppercase">
+            <h3 class="text-center">PUPPY LOVE</h3>
             <p>ESTAMOS AQUÍ POR ELLOS<br>QUIENES SON PURO AMOR</p>
-            <button>¡ADOPTA!</button>
-            <p>LEER MÁS <br><img src="img/icons/arrow.svg" alt=""></p>
+            <button type="button" class="btn btn-danger">¡ADOPTA!</button><br><br>
+            <p>LEER MÁS <br><br><img src="img/icons/arrow.svg" alt="continue-leyendo"></p>
            </div>
          </div>
      </header>
@@ -23,9 +23,9 @@
       <p class="title">SON EXCELENTES COMPAÑEROS<br>¡TENEMOS MUCHOS DE ELLOS QUE ESPERAN CONOCERTE!</p>
       <span class="bajada">Nosotros te ayudaremos a encontrar a un puppy love que sea compatible con tu estilo de vida.<br>¡Visita nuestro centro de adopciones para encontrar a un pequeño amigo y mucho amor!</span><br>
       <span>
-       <img src="img/icons/pet-plate.svg" alt="">
-       <img src="img/icons/collar.svg" alt="">
-       <img src="img/icons/bone.svg" alt="">
+       <img src="img/icons/pet-plate.svg" alt="plato-comid-perro">
+       <img src="img/icons/collar.svg" alt="collar">
+       <img src="img/icons/bone.svg" alt="hueso">
       </span>
      </div>
      <div id="can">
@@ -34,13 +34,13 @@
         <img src="img/pic01.jpg" class="img-text" alt="perro-en-skate">
        </div>
        <div class="col-md-8">
-        <p class="title">Rescatados<br>Fueron rescatados del abandono o una mala crianza.</p>
+        <p class="title text-uppercase">Rescatados<br>Fueron rescatados del abandono o una mala crianza.</p>
         <span class="bajada">Todos ellos han pasado por un proceso de socialización en los albergues, lo que garantiza su recuperación.</span>
        </div>
       </div>
       <div class="row">
        <div class="col-md-8">
-        <p class="title">Únicos</p>
+        <p class="title text-uppercase">Únicos</p>
         <span class="bajada">Todos son sobrevivientes, son héroes con historias y experiencias que lo hacen únicos.</span>
        </div>
        <div class="col-md-4">
@@ -52,47 +52,47 @@
         <img src="img/pic03.jpg" class="img-text" alt="perro-en-skate">
        </div>
        <div class="col-md-8">
-        <p class="title">Nobles<br>Un Puppy Love agradecerá siempre poder compartir su vida a tu lado.</p>
+        <p class="title text-uppercase">Nobles<br>Un Puppy Love agradecerá siempre poder compartir su vida a tu lado.</p>
         <span class="bajada">Será un amigo fiel que te acompañará y alegrará tus días.</span>
        </div>
       </div>
      </div>
      <div id="beneficios" class="text-center">
-      <p class="title">SON EXCELENTES COMPAÑEROS<br>¡TENEMOS MUCHOS DE ELLOS QUE ESPERAN CONOCERTE!</p>
+      <p class="title text-uppercase">SON EXCELENTES COMPAÑEROS<br>¡TENEMOS MUCHOS DE ELLOS QUE ESPERAN CONOCERTE!</p>
       <span class="bajada">Nosotros te ayudaremos a encontrar a un puppy love que sea compatible con tu estilo de vida.<br>¡Visita nuestro centro de adopciones para encontrar a un pequeño amigo y mucho amor!</span>
-      <div class="row text-left">
+      <div class="row text-left col-md-offset-3">
        <div class="col-md-3">
-        <img src="img/icons/bone-rotate.svg" alt=""><br>
+        <img src="img/icons/bone-rotate.svg" alt="alimentacion"><br>
         <p class="title">Alimentación adecuada</p>
         <span class="bajada">Asegurate que su dieta vaya acorde a su edad y peso. Es importante para una buena calidad de vida.</span>
        </div>
        <div class="col-md-3">
-        <img src="img/icons/pet-house.svg" alt=""><br>
-        <p class="title">Espacios idóneos</p>
+        <img src="img/icons/pet-house.svg" alt="casa-perro"><br>
+        <p class="title text-uppercase">Espacios idóneos</p>
         <span class="bajada">Proporciónale un espacio donde pueda jugar, descansar, desenvolverse y ser parte activa de la vida de tu familia.</span>
        </div>
       </div>
-      <div class="row text-left">
+      <div class="row text-left col-md-offset-3">
        <div class="col-md-3">
-        <img src="img/icons/pet.svg" alt=""><br>
-        <p class="title">Son de gran beneficio para niños y adultos mayores</p>
+        <img src="img/icons/pet.svg" alt="mascota"><br>
+        <p class="title text-uppercase">Son de gran beneficio para niños y adultos mayores</p>
         <span class="bajada">Siempre que se decida cuidar de ellos en consciencia.</span>
        </div>
        <div class="col-md-3">
-        <img src="img/icons/track.svg" alt=""><br>
-        <p class="title">Debemos tener en cuenta que adoptarlos supone una gran responsabilidad</p>
+        <img src="img/icons/track.svg" alt="huella"><br>
+        <p class="title text-uppercase">Debemos tener en cuenta que adoptarlos supone una gran responsabilidad</p>
         <span class="bajada">Costes económicos adicionales y una atención constante.</span>
        </div>
       </div>
-      <div class="row text-left">
+      <div class="row text-left col-md-offset-3">
        <div class="col-md-3">
-        <img src="img/icons/dog.svg" alt=""><br>
-        <p class="title">Adopta</p>
+        <img src="img/icons/dog.svg" alt="perro"><br>
+        <p class="title text-uppercase">Adopta</p>
         <span class="bajada"> Serán tus mejores amigos, estarán contigo y serán parte de tu familia.</span>
        </div>
        <div class="col-md-3">
-        <img src="img/icons/track-two.svg" alt=""><br>
-        <p class="title">Apadrina</p>
+        <img src="img/icons/track-two.svg" alt="huellitas"><br>
+        <p class="title text-uppercase">Apadrina</p>
         <span class="bajada">Puedes apadrinarlos, son amistosos, educados y necesitan de tu apoyo.</span>
        </div>
       </div>
@@ -104,7 +104,8 @@
         <span class="bajada">¡Visita nuestro centro de adopciones para encontrar a un pequeño amigo y mucho amor!</span>
        </div>
        <div class="col-md-5">
-        
+        <button type="button" class="btn btn-danger">¡ADOPTA!</button><br>
+        <button type="button" class="btn btn-default">CONOCE MÁS</button>
        </div>
       </div>
      </div>
