--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,14 @@
   <html lang="en">
   <head>
       <meta charset="UTF-8">
+      <meta name="keywords" content="perros, adopción, responsabilidad, familia, cachorros, can, canes, animal, animales, puppy, love, adoption">
       <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
       <link rel="stylesheet" href="css/bootstrap.min.css">
       <link rel="stylesheet" href="css/main.css">
-      <title>Puppy Love</title>
+      <title>Puppy Love | Adopción responsable de perros de todas las razas, todas las edades. Encuentra el can ideal para ti</title>
   </head>
   <body>
-     <header>
+     <header role="banner">
          <div>
            <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
            <div id="title" class="text-center text-uppercase">
@@ -19,7 +20,7 @@
            </div>
          </div>
      </header>
-     <div id="compromiso" class="text-center">
+     <div id="compromiso" class="text-center" role="article">
       <p class="title">SON EXCELENTES COMPAÑEROS<br>¡TENEMOS MUCHOS DE ELLOS QUE ESPERAN CONOCERTE!</p>
       <span class="bajada">Nosotros te ayudaremos a encontrar a un puppy love que sea compatible con tu estilo de vida.<br>¡Visita nuestro centro de adopciones para encontrar a un pequeño amigo y mucho amor!</span><br>
       <span>
@@ -28,7 +29,7 @@
        <img src="img/icons/bone.svg" alt="hueso">
       </span>
      </div>
-     <div id="can">
+     <div id="can" role="definition">
       <div class="row">
        <div class="col-md-4">
         <img src="img/pic01.jpg" class="img-text" alt="perro-en-skate">
@@ -57,7 +58,7 @@
        </div>
       </div>
      </div>
-     <div id="beneficios" class="text-center">
+     <div id="beneficios" class="text-center" role="list">
       <p class="title text-uppercase">SON EXCELENTES COMPAÑEROS<br>¡TENEMOS MUCHOS DE ELLOS QUE ESPERAN CONOCERTE!</p>
       <span class="bajada">Nosotros te ayudaremos a encontrar a un puppy love que sea compatible con tu estilo de vida.<br>¡Visita nuestro centro de adopciones para encontrar a un pequeño amigo y mucho amor!</span>
       <div class="row text-left col-md-offset-3">
@@ -97,7 +98,7 @@
        </div>
       </div>
      </div>
-     <div id="contactanos">
+     <div id="contactanos" role="form">
       <div class="row">
        <div class="col-md-5">
         <p class="title">¡TENEMOS MUCHOS DE ELLOS QUE ESPERAN CONOCERTE!</p>
@@ -109,7 +110,7 @@
        </div>
       </div>
      </div>
-     <footer>
+     <footer role="link">
          <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
          <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
          <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
